--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -31,3 +31,17 @@
 
 
 @import "persian";
+
+// در فایل: _sass/custom/custom.scss
+.greedy-nav .visible-links {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  
+  // تنظیمات اضافی برای آیتم‌های منو
+  li {
+    white-space: nowrap;
+    margin: 2px 5px;
+  }
+}
+
